--- a/Taskia-hw/assets/styling/scss/components/generic.scss
+++ b/Taskia-hw/assets/styling/scss/components/generic.scss
@@ -532,6 +532,7 @@ body{
             margin-top: 1000px;
         }
         .more-info__schedule-board{
+            margin-left: 0px;
         .more-info__schedule-board__brief{
             text-align: left;
             margin-left: 60px;
@@ -546,6 +547,7 @@ body{
         margin-left: -10px;
     }
     .more-info__data-hologram{
+        margin-left: 0px;
         .more-info__data-hologram__header{
             margin-top: -250px;
             margin-left: 140px;
